<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.chowpals.chowmein.MainActivity"
    tools:showIn="@layout/app_bar_main">


    <android.support.v7.widget.CardView
        android:id="@+id/welcomeMessageCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"

        android:layout_marginTop="16dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:id="@+id/welcomeMessageConstraintView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/welcomeMessageTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:text="@string/welcome_to_chow_me_in"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold|italic" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/createChowCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeMessageCardView"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:id="@+id/createChowConstraintView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical">

            <Button
                android:id="@+id/createChowButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@android:drawable/ic_input_add"
                android:backgroundTint="@android:color/darker_gray"
                android:onClick="createChow" />

            <TextView
                android:id="@+id/createChowTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/createChowButton"
                android:text="@string/got_food_to_offer_create_a_chow_here"
                android:textColor="@android:color/black"
                android:textSize="26sp"
                android:textStyle="bold|italic" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/searchChowCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/createChowCardView"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:id="@+id/searchChowConstraintView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/chowsCreatedByUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:text="@string/search_existing_chows_here"
                android:textColor="@android:color/black"
                android:textSize="26sp"
                android:textStyle="bold|italic" />

            <SearchView
                android:id="@+id/chowsSearchViewMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chowsCreatedByUser"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0" />

            <ListView
                android:id="@+id/searchChowListViewMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/chowsSearchViewMain"
                android:layout_marginBottom="8dp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>