<resources>
    <string name="app_name">Chow Me-In</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_view_chow">ViewChowActivity</string>
    <string name="food_post_name_here">Chow Post Name Here</string>
    <string name="food_post_location_here">Chow Post Location Here</string>
    <string name="food_post_time_here">Hour:Minute:AM/PM</string>
    <string name="food_post_description_here">Chow Post Description Here</string>
    <string name="chow_me_in">Chow Me In</string>
    <string name="title_activity_create_chow">Create a Chow</string>
    <string name="title_activity_search_chow">Search for a Chow</string>
    <string name="got_food_to_offer_create_a_chow_here">Got food to offer? Create a Chow here!</string>
    <string name="welcome_to_chow_me_in">Welcome to Chow Me In!</string>
    <string name="search_existing_chows_here">Search existing Chows here!</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to config -->
    <string name="base_url">https://api.chowme-in.com</string>
    <string name="CALLING_CLASS">Calling Class</string>

    <!-- Example General settings -->
    <string name="pref_header_general">User Settings</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Keaton MacLeod</string>
    <string name="pref_default_email">cotton_candy_luvr_99@hotmail.com</string>
    <string name="pref_default_user">sweetcakes24</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="submit_chow">Submit Chow</string>
    <string name="verify_chow">Verify Chow</string>
    <string name="title_activity_login">login</string>
    <string name="login_username">User Name</string>
    <string name="title_activity_view_my_chows">ViewMyChowsActivity</string>
    <string name="chows_you_have_joined">Chows you have joined!</string>
    <string name="chows_created_by_you">Chows created by you!</string>
</resources>
