<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="sign_in_view" type="id" />
</resources>